--- a/src/resources/mainpage.html
+++ b/src/resources/mainpage.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="./anime.js"></script>
     <title>Darwin IDE</title>
 </head>
 
@@ -145,11 +146,20 @@
         </div>
     </div>
 
-
+    <div id="test_anime" style="height: 100px; width: 200px;">
+测试ssssssssssssssssssssss
+    </div>
 </body>
 
 <script>
     const vscode = acquireVsCodeApi();
+    animate({
+        targets: 'div',
+        translateX: 250,
+        rotate: '1turn',
+        backgroundColor: '#FFF',
+        duration: 800
+    });
     $("#upload_btn").click(function () {
         $("#upload_file").click();
     });
