--- a/src/resources/index.html
+++ b/src/resources/index.html
@@ -100,10 +100,14 @@
             <br />
             <br />
             <br />
-            <button id="ann_conversion_btn" type="button" class="btn btn-primary">ANN模型导入转换</button>
+            <button id="ann_conversion_btn" type="button" class="btn btn-primary">ANN模型参数调整</button>
             <br />
             <br />
             <br />
+            <button id="ann_convert_snn_simulate" type="button" class="btn btn-primary">ANN模型转SNN与仿真</button>
+            <br/>
+            <br/>
+            <br/>
             <button id="import_snn_btn" type="button" class="btn btn-primary">SNN模型导入</button>
             <br />
             <br />
@@ -146,6 +150,12 @@
                 <div id="circle3" class="circle" style="height: 65px;width: 65px;display: inline-block;">
                     <span style="color: rgb(248, 252, 252); width: 65px; height: 65px;display: inline-block;text-align: center;">
                         参数<br/>调整</br>与校验
+                    </span>
+                </div>
+                <div id="arrow3" class="arrow-right" style="height: 60px;width: 60px;display: inline-block;"></div>
+                <div id="circle4" class="circle" style="height: 65px;width: 65px;display: inline-block;">
+                    <span style="color: rgb(248, 252, 252); width: 65px; height: 65px;display: inline-block;text-align: center;">
+                        模型<br/>转换</br>仿真
                     </span>
                 </div>
             </article>
@@ -291,6 +301,18 @@
         let modelPath = $("#upload_ann_model").prop("files")[0].path.split("\\").join("\\\\");
         vscode.postMessage(JSON.stringify({"start_ann_conversion":modelPath}));
     });
+    $("#ann_convert_snn_simulate").click(function(){
+        // 参数调整后的ANN转为SNN并在模拟器上运行
+        console.log("Convert ANN to SNN and simulate on brain2 based.");
+        anime({
+            targets:"#circle4",
+            backgroundColor:["rgb(14, 18, 219)", "rgb(50, 205, 50)"],
+            easing:"easeInOutQuad",
+            duration:1000,
+            loop:true
+        });
+        vscode.postMessage(JSON.stringify({"start_simulate_from_ann":"start"}));
+    });
     window.addEventListener("message",event=>{
         console.log("event data="+event.data);
         recvObj = JSON.parse(event.data);
@@ -327,6 +349,23 @@
             });
             setTimeout(() => {
                 anime.remove("#circle3");
+            }, 1500);
+        }else if(recvObj.convertedSNNSimu){
+            console.log("Receive SNN built from ANN simulation output.");
+            let prevContent = $("#annOutput").html();
+            prevContent += "<br/>"+recvObj.convertedSNNSimu.toString().split("\r\n").join("<br/>");
+            $("#annOutput").html(prevContent);
+            $("#annOutput").animate({scrollTop:$("#annOutput").get(0).scrollHeight},1);
+            anime.remove("#circle4");
+            anime({
+                targets:"#circle4",
+                backgroundColor:["rgb(14, 18, 219)","rgb(50, 205, 50)"],
+                easing:"easeInOutQuad",
+                duration:1000,
+                loop:false
+            });
+            setTimeout(() => {
+                anime.remove("#circle4");
             }, 1500);
         }
     });
